--- a/documents/Probabilidad/main.tex
+++ b/documents/Probabilidad/main.tex
@@ -26,4 +26,6 @@
     \input{Ejercicios_Clase_4.tex}
     \newpage
     \input{Ejercicios_Clase_5.tex}
+    \newpage
+    \input{Ejercicios_Clase_6.tex}
 \end{document}
