--- a/documents/Topología_I/main.tex
+++ b/documents/Topología_I/main.tex
@@ -21,6 +21,7 @@
 
     \input{Tema_1.tex}
     \newpage
+    \input{Tema_2.tex}
     % \chapter{Relaciones de Problemas}
     % \input{Relación 1.tex}
 \end{document}
