--- a/documents/Topología_I/Tema_2.tex
+++ b/documents/Topología_I/Tema_2.tex
@@ -10,7 +10,8 @@
             \filldraw[rounded corners=10pt, dashed, thick, fill=\incolor] (0,0) rectangle (3,-3);
 
             \node at (1.5, -3.5) {$(X, \cc{T})$};
-            \node at (4, -1.5) {$\to$};
+            \node at (4, -1.1) {$f$};
+            \node at (4, -1.5) {$\longrightarrow$};
 
             \filldraw[rounded corners=10pt, dashed, thick, fill=\incolor] (5,0) rectangle (8,-3);
 
